fixed spacing issues

--- a/soon.css
+++ b/soon.css
@@ -1,46 +1,40 @@
 @font-face {
-    src: url(/fonts/Maxeville\ Bold.otf);
-    font-family: Maxeville-Bold;
-  }
-  
-  @font-face {
-    src: url(/fonts/Maxeville\ Regular.otf);
-    font-family: Maxeville-Regular;
-  }
-  
-  @font-face {
-    src: url(/fonts/Maxeville\ Regular\ Italic.otf);
-    font-family: Maxeville-Italic;
-  }
-  
-  @font-face {
-    src: url(/fonts/Rhymes-RegularDisplay.otf);
-    font-family: Rhymes-Regular;
-  }
+  src: url(/fonts/Maxeville\ Bold.otf);
+  font-family: Maxeville-Bold;
+}
+
+@font-face {
+  src: url(/fonts/Maxeville\ Regular.otf);
+  font-family: Maxeville-Regular;
+}
+
+@font-face {
+  src: url(/fonts/Maxeville\ Regular\ Italic.otf);
+  font-family: Maxeville-Italic;
+}
+
+@font-face {
+  src: url(/fonts/Rhymes-RegularDisplay.otf);
+  font-family: Rhymes-Regular;
+}
 
 html,
 body {
   margin: 0;
-  height: 100%;
+  height: 100vh;
   cursor: url("./images/cursor_PNG102-ORANGE-2.png"), auto;
 }
 .my-container {
   height: 100vh;
 }
 
-.my-row {
-  height: 94vh;
-}
-
 .thevideo {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100vh;
   overflow: hidden;
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
   object-fit: cover;
   z-index: -1;
   visibility: hidden;
@@ -80,6 +74,7 @@ a:hover {
 }
 
 @media only screen and (min-width: 768px) {
+  /*
   .video2 {
     background-image: url("/images/Soon_Logo_Homepage_Black_60.png");
     background-repeat: no-repeat;
@@ -96,7 +91,7 @@ a:hover {
     margin-left: 30px;
     height: 100px;
   }
-
+*/
   .logo-1 {
     opacity: 0;
   }
@@ -111,19 +106,22 @@ a:hover {
   }
 
   .logo-3 {
-      display: inline-block;
-      text-align: right;
-      margin-right: 0px;
-      margin-bottom: 0px;
-      font-family: Rhymes-Regular;
-      margin-bottom: 20px;
-      margin-right: 30px;
-      text-align: right;
+    display: inline-block;
+    text-align: right;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    font-family: Rhymes-Regular;
+    margin-bottom: 20px;
+    margin-right: 30px;
+    text-align: right;
   }
 }
 
 @media only screen and (max-width: 768px) {
-
+  .footer-items {
+    padding-top: 13em;
+  }
+  /*
   .video2 {
     background-image: url("/images/Soon_Logo_Homepage_Black_25.png");
     background-repeat: no-repeat;
@@ -140,7 +138,7 @@ a:hover {
     overflow: hidden;
     opacity: 1;
   }
-
+*/
   .logo-1 {
     margin-top: 20px;
     margin-left: 10px;
@@ -157,17 +155,17 @@ a:hover {
     margin-bottom: 20px;
     align-self: flex-end;
     text-align: left;
-}
+  }
 
   .logo-3 {
-      display: inline-block;
-      text-align: right;
-      margin-right: 20px;
-      font-family: Rhymes-Regular;
-      font-size: 12px;
-      margin-bottom: 20px;
-      align-self: flex-end;
-      text-align: right;
+    display: inline-block;
+    text-align: right;
+    margin-right: 20px;
+    font-family: Rhymes-Regular;
+    font-size: 12px;
+    margin-bottom: 20px;
+    align-self: flex-end;
+    text-align: right;
   }
 
   .quotes-2 {
